- fixed spacing on the orgSeries-options.php file so that it scales properly for lower resolution screens. - added note to readme.txt about changes to looks of orgSeries-options.php file.
git-svn-id: http://plugins.svn.wordpress.org/organize-series/trunk@168939 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/orgSeries-admin.css
+++ b/orgSeries-admin.css
@@ -111,3 +111,15 @@ input #seriesadd {
 	float: left;
 	width: 60%;
 }
+
+.widefat .seriesmanage {
+	min-width: 500px;
+}
+
+.template {
+	width: 100%;
+}
+
+.seriesdescr {
+	width: 20%;
+}
